--- a/labels_obb.ipynb
+++ b/labels_obb.ipynb
@@ -339,10 +339,10 @@
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # 配置路径 \n",
-    "    image_dir = \"D:/project/project_drive/zhang_drive/train_yolov8_obb/newdata/image\"\n",
-    "    json_dir = \"D:/project/project_drive/zhang_drive/train_yolov8_obb/newdata/mydata\"\n",
-    "    output_dir = \"D:/project/project_drive/zhang_drive/train_yolov8_obb/newdata/labels\"\n",
-    "    class_list = [\"face\", \"belt\",\"phone\", \"smoke\", \"food\",\"items\"]  # 或从文件读取 \n",
+    "    image_dir = \"D:/project/train_yolov8_obb/newdata/image\"\n",
+    "    json_dir = \"D:/project/train_yolov8_obb/newdata/mydata\"\n",
+    "    output_dir = \"D:/project/train_yolov8_obb/newdata/labels\"\n",
+    "    class_list = [\"face\", \"head\",\"phone\"]  # 或从文件读取 \n",
     "    # 执行批量转换 \n",
     "    batch_convert(image_dir, json_dir, output_dir, class_list)\n",
     "    \n",
