--- a/labels_obb.ipynb
+++ b/labels_obb.ipynb
@@ -368,7 +368,7 @@
     "import numpy as np\n",
     "\n",
     "# 示例：绘制 OBB 框\n",
-    "img = cv2.imread(\"/home/zhuofei/linux_data/liujunyan/DMS/zhang_drive/badbehavior_classes6/image/IRCamera_ID00011_20222017_女_21_DZ01_hat_000000011.png\")\n",
+    "img = cv2.imread(\"/home/000000011.png\")\n",
     "h, w = img.shape[:2]\n",
     "obb_line = \"1 0.87445107 0.70505134 0.91142902 0.70264630 0.90824966 0.54814860 0.87127171 0.55055364\"  # 示例 OBB 标签\n",
     "parts = list(map(float, obb_line.split()))\n",
